[metadata]
name = pycuse
author = Jevin Sweval
author_email = jevinsweval@gmail.com
description = pycuse - CUSE (chardev in userspace) Python library 
version = attr: pycuse.__version__
url = https://github.com/jevinskie/pycuse

[options]
python_requires = >= 3.8
packages = find:
zip_safe = True
install_requires =
  rich >= 11.2.0
  attrs >= 21.4.0
  cffi >= 1.15.0
  path >= 16.4.0

[options.extras_require]
dev =
  black >= 22.1.0
  isort >= 5.10.1
  pytest >= 7.0.1
  pytest-clarity >= 1.0.1
  pytest-pycharm >= 0.7.0
  pytest-randomly >= 3.11.0
  pytest-cov >= 3.0.0
  ipython >= 8.0.1
  pre-commit >= 2.17.0

[isort]
profile = black

[build-system]
requires = ["setuptools", "wheel"]
